--- a/frontend/layouts/_default/resume.html
+++ b/frontend/layouts/_default/resume.html
@@ -64,9 +64,9 @@
                     <div class="project-content">
                         <div class="project-visual">
                             {{ if .image }}
-                            <img src="{{ .image }}" alt="{{ .name }} preview" class="project-image">
+                            <img src="{{ .image }}" class="project-image">
                             {{ else }}
-                            <img src="/images/projects/Placeholder.avif" alt="{{ .name }} preview" class="project-image project-placeholder-img">
+                            <img src="/images/projects/Placeholder.avif" class="project-image project-placeholder-img">
                             {{ end }}
                         </div>
                         
@@ -169,13 +169,13 @@
             <h2 class="section-title">Certifications</h2>
             <div class="certification-badges">
                 <a href="https://www.credly.com/badges/b70321d1-5dfe-4a79-9b44-a9928e179cb2/public_url" target="_blank" class="badge-link">
-                    <img src="/images/badges/terraform-badge.avif" alt="Terraform Associate Certification" class="badge-image terraform-badge">
+                    <img src="/images/badges/terraform-badge.avif" class="badge-image terraform-badge">
                 </a>
                 <a href="https://www.credly.com/badges/1efe4a02-5b9d-4e10-9a0a-08ae77be328e/public_url" target="_blank" class="badge-link">
-                    <img src="/images/badges/aws-saa.avif" alt="AWS Solutions Architect Associate" class="badge-image aws-badge">
+                    <img src="/images/badges/aws-saa.avif" class="badge-image aws-badge">
                 </a>
                 <a href="https://www.credly.com/badges/24cd9797-e5fd-4872-b6de-777677733183/public_url" target="_blank" class="badge-link">
-                    <img src="/images/badges/ckad.avif" alt="Certified Kubernetes Application Developer" class="badge-image aws-badge">
+                    <img src="/images/badges/ckad.avif" class="badge-image aws-badge">
                 </a>
             </div>
         </div>
