--- a/frontend/assets/css/components/cards.css
+++ b/frontend/assets/css/components/cards.css
@@ -332,7 +332,7 @@
   transition: all var(--transition-base);
   display: flex;
   flex-direction: column;
-  min-height: 600px;
+  height: 100%;
 }
 
 .teaching-card-modern:hover {
@@ -343,14 +343,16 @@
 
 .card-image-wrapper {
   position: relative;
-  height: 250px;
+  height: 300px;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .card-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
   transition: transform var(--transition-slow);
 }
 
