--- a/frontend/layouts/_default/single.html
+++ b/frontend/layouts/_default/single.html
@@ -3,7 +3,7 @@
         <div class="post-container">
             <article class="post-article">
                 {{ if .Params.personal_note }}
-                    <div class="personal-note-ribbon">from personal notes that predate this website</div>
+                    <div class="personal-note-ribbon">from pre-site personal notes</div>
                 {{ end }}
                 <header class="post-header">
                     <h1 class="post-title">{{ .Title }}</h1>
