how did i overlook this

--- a/frontend/layouts/_default/contact.html
+++ b/frontend/layouts/_default/contact.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="contact-details">
                             <h3 class="contact-method">GitHub</h3>
-                            <a href="https://github.com/sengweiyeoh" class="contact-link" target="_blank" rel="noopener noreferrer">github.com/sengweiyeoh</a>
+                            <a href="https://github.com/pepsipotty" class="contact-link" target="_blank" rel="noopener noreferrer">github.com/pepsipotty</a>
                         </div>
                     </div>
                 </div>
