--- a/frontend/layouts/partials/nav.html
+++ b/frontend/layouts/partials/nav.html
@@ -22,22 +22,32 @@
                 </li>
             </ul>
         </div>
-        <div class="nav__dropdown">
-            <ul class="nav__dropdown-menu" role="menu">
-                <li class="nav__dropdown-item">
-                    <a href="{{ "/" | relURL }}" class="nav__dropdown-link{{ if eq .Page.RelPermalink "/" }} nav__dropdown-link--active{{ end }}">Home</a>
+        
+        <!-- Mobile hamburger button -->
+        <button class="nav__mobile-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+            <span class="nav__hamburger">
+                <span class="nav__hamburger-line"></span>
+                <span class="nav__hamburger-line"></span>
+            </span>
+        </button>
+        
+        <!-- Mobile dropdown menu -->
+        <div class="nav__mobile-menu">
+            <ul class="nav__mobile-menu-list" role="menu">
+                <li class="nav__mobile-item">
+                    <a href="{{ "/" | relURL }}" class="nav__mobile-link{{ if eq .Page.RelPermalink "/" }} nav__mobile-link--active{{ end }}">Home</a>
                 </li>
-                <li class="nav__dropdown-item">
-                    <a href="{{ "/resume" | relURL }}" class="nav__dropdown-link{{ if eq .Page.RelPermalink "/resume/" }} nav__dropdown-link--active{{ end }}">Resume</a>
+                <li class="nav__mobile-item">
+                    <a href="{{ "/resume" | relURL }}" class="nav__mobile-link{{ if eq .Page.RelPermalink "/resume/" }} nav__mobile-link--active{{ end }}">Resume</a>
                 </li>
-                <li class="nav__dropdown-item">
-                    <a href="{{ "/teaching" | relURL }}" class="nav__dropdown-link{{ if eq .Page.RelPermalink "/teaching/" }} nav__dropdown-link--active{{ end }}">Teaching</a>
+                <li class="nav__mobile-item">
+                    <a href="{{ "/teaching" | relURL }}" class="nav__mobile-link{{ if eq .Page.RelPermalink "/teaching/" }} nav__mobile-link--active{{ end }}">Teaching</a>
                 </li>
-                <li class="nav__dropdown-item">
-                    <a href="{{ "/blog" | relURL }}" class="nav__dropdown-link{{ if eq .Page.RelPermalink "/blog/" }} nav__dropdown-link--active{{ end }}">Blog</a>
+                <li class="nav__mobile-item">
+                    <a href="{{ "/blog" | relURL }}" class="nav__mobile-link{{ if eq .Page.RelPermalink "/blog/" }} nav__mobile-link--active{{ end }}">Blog</a>
                 </li>
-                <li class="nav__dropdown-item">
-                    <a href="{{ "/contact" | relURL }}" class="nav__dropdown-link{{ if eq .Page.RelPermalink "/contact/" }} nav__dropdown-link--active{{ end }}">Contact</a>
+                <li class="nav__mobile-item">
+                    <a href="{{ "/contact" | relURL }}" class="nav__mobile-link{{ if eq .Page.RelPermalink "/contact/" }} nav__mobile-link--active{{ end }}">Contact</a>
                 </li>
             </ul>
         </div>
