--- a/frontend/layouts/_default/baseof.html
+++ b/frontend/layouts/_default/baseof.html
@@ -53,9 +53,7 @@
             const phrases = [
                 'Cloud Engineer',
                 'Software Developer', 
-                'DevOps Specialist',
-                'Tech Innovator',
-                'Team Leader'
+                'DevOps Engineer',
             ];
 
             let phraseIndex = 0;
